# rag-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
rag_from_sratch/: __init__.py  abbreviations.py  chroma_processing.py  config.py  openai_interface.py  save_results.py  text_splitter.py
src/rag_from_scratch/: __init__.py
src/rag_from_scratch/cli/: __init__.py  main.py
src/rag_from_scratch/config/: __init__.py  config.py  config.toml
src/rag_from_scratch/core/: __init__.py  document_processing.py  rag_pipeline.py  text_splitter.py
src/rag_from_scratch/services/: __init__.py  chroma_service.py  openai_service.py
src/rag_from_scratch/utils/: config.py  logging_config.py  save_results.py
tests/rag_from_scratch/core/: test_document_processing.py  test_text_splitter.py
