[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "A RAG implementation from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "openai>=1.65.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "numpy<2.0.0",
]

[project.optional-dependencies]
dev = [    
"pytest>=8.3.5",
"ruff>=0.9.9"
]

[project.scripts]
rag-from-scratch = "rag_from_scratch.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_from_scratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]